# Lens

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: build.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  state.rs
src-tauri/src/clipboard/: mod.rs  monitor.rs  pasteboard.rs  storage.rs  types.rs
src-tauri/src/commands/: clipboard.rs  icon.rs  mod.rs  permissions.rs  search.rs  shortcut.rs  tray.rs  updater.rs  window.rs
src/components/: Icon.tsx  SettingRow.tsx  SettingSection.tsx  ShortcutRecorder.tsx  Sidebar.tsx  Toggle.tsx
src/components/clipboard/: ClipDetail.tsx  ClipKindIcon.tsx  ClipList.tsx  SearchHeader.tsx
src/components/search/: ResultIcon.tsx  ResultList.tsx  SearchInput.tsx
src/components/settings/: LanguageToggle.tsx  PermissionRow.tsx
src/hooks/: useClipboardItems.ts  useClipboardSettings.ts  useFileIcon.ts  useShortcut.ts
src/i18n/: en.ts  index.ts  zh.ts
src/pages/: ClipboardPage.tsx  SearchPage.tsx
src/pages/settings/: AboutPanel.tsx  ClipboardPanel.tsx  GeneralPanel.tsx  PermissionsPanel.tsx  ShortcutPanel.tsx  index.tsx
src/utils/: accelerator.ts  clipboard.ts
